[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/Game/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/2.png" type="Texture" id=3]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/4.png" type="Texture" id=5]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/5.png" type="Texture" id=6]
<<<<<<< HEAD
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/2.png" type="Texture" id=7]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/3.png" type="Texture" id=8]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/3.png" type="Texture" id=12]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/1.png" type="Texture" id=13]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/2.png" type="Texture" id=14]
[ext_resource path="res://Assets/animacions provisionals/respira/1.png" type="Texture" id=15]
[ext_resource path="res://Assets/animacions provisionals/respira/2.png" type="Texture" id=16]
[ext_resource path="res://Assets/animacions provisionals/respira/3.png" type="Texture" id=17]
[ext_resource path="res://Assets/animacions provisionals/respira/4.png" type="Texture" id=18]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/5.png" type="Texture" id=19]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/6.png" type="Texture" id=20]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/2.png" type="Texture" id=21]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/1.png" type="Texture" id=22]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/1.png" type="Texture" id=23]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/2.png" type="Texture" id=24]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/3.png" type="Texture" id=25]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/4.png" type="Texture" id=26]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/5.png" type="Texture" id=27]
[ext_resource path="res://Assets/animacions provisionals/salta/normal/3.png" type="Texture" id=28]
[ext_resource path="res://Assets/animacions provisionals/salta/normal/4.png" type="Texture" id=29]
[ext_resource path="res://Assets/animacions provisionals/camina/1.png" type="Texture" id=30]
[ext_resource path="res://Assets/animacions provisionals/camina/2.png" type="Texture" id=31]
[ext_resource path="res://Assets/animacions provisionals/camina/3.png" type="Texture" id=32]
[ext_resource path="res://Assets/animacions provisionals/camina/4.png" type="Texture" id=33]
[ext_resource path="res://Assets/animacions provisionals/camina/5.png" type="Texture" id=34]
=======
[ext_resource path="res://Assets/animacions provisionals/salta/normal/3.png" type="Texture" id=7]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/1.png" type="Texture" id=8]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/2.png" type="Texture" id=9]
[ext_resource path="res://Assets/animacions provisionals/camina/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/animacions provisionals/camina/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/animacions provisionals/camina/3.png" type="Texture" id=12]
[ext_resource path="res://Assets/animacions provisionals/camina/4.png" type="Texture" id=13]
[ext_resource path="res://Assets/animacions provisionals/camina/5.png" type="Texture" id=14]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/1.png" type="Texture" id=15]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/2.png" type="Texture" id=16]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/3.png" type="Texture" id=17]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/4.png" type="Texture" id=18]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/5.png" type="Texture" id=19]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/2.png" type="Texture" id=20]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/3.png" type="Texture" id=21]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/4.png" type="Texture" id=22]
[ext_resource path="res://Assets/animacions provisionals/respira/1.png" type="Texture" id=23]
[ext_resource path="res://Assets/animacions provisionals/respira/2.png" type="Texture" id=24]
[ext_resource path="res://Assets/animacions provisionals/respira/3.png" type="Texture" id=25]
[ext_resource path="res://Assets/animacions provisionals/respira/4.png" type="Texture" id=26]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/1.png" type="Texture" id=27]
[ext_resource path="res://Assets/animacions provisionals/salta/normal/4.png" type="Texture" id=28]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/2.png" type="Texture" id=29]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/3.png" type="Texture" id=30]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/1.png" type="Texture" id=31]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/2.png" type="Texture" id=32]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/5.png" type="Texture" id=33]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/6.png" type="Texture" id=34]
>>>>>>> parent of ca2473a... tecles

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "kamikami",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "voltereta_amunt",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "pega_dret",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 13 ) ],
=======
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "baixa_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "pega_esq",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "camina",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "patada_forta",
"speed": 15.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
>>>>>>> parent of ca2473a... tecles
"loop": false,
"name": "patada",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "voltereta_avall",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "acaba_voltereta",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 21 ), ExtResource( 10 ) ],
=======
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "acaba_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 7 ), ExtResource( 28 ) ],
"loop": false,
"name": "puja_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 8 ) ],
>>>>>>> parent of ca2473a... tecles
"loop": false,
"name": "pega_dret",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "acaba_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
=======
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": false,
"name": "patada",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ) ],
>>>>>>> parent of ca2473a... tecles
"loop": false,
"name": "voltereta_avall",
"speed": 10.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 22 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "puja_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "baixa_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "camina",
=======
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "acaba_voltereta",
>>>>>>> parent of ca2473a... tecles
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.3434, 97.8282 )

[node name="Ryu" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "baixa_salt"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.02304, 5.72146 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -2.85461, 113.092 )
cast_to = Vector2( 0, 25 )

[node name="Position_dreta" type="Position2D" parent="."]
position = Vector2( 93.3567, -19.1124 )

[node name="Position_esquerra" type="Position2D" parent="."]
position = Vector2( -73.4315, -17.946 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
